--- a/package.json
+++ b/package.json
@@ -6,11 +6,10 @@
     "start": "node ./index.js"
   },
   "dependencies": {
-    "cookie-parser": "~1.4.4",
-    "debug": "~2.6.9",
+    "axios": "^1.5.1",
     "express": "~4.16.1",
-    "http-errors": "~1.6.3",
-    "jade": "~1.11.0",
-    "morgan": "~1.9.1"
+    "fetch": "^1.1.0",
+    "node": "^20.7.0",
+    "node-fetch": "^3.3.2"
   }
 }
