--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -9,6 +9,8 @@ services:
     - '3000:3000'
     external_links:
     - mongo
+    volumes:
+    - .:/usr/src/app
   
   mongo:
     container_name: mongo
