--- a/package.json
+++ b/package.json
@@ -3,13 +3,16 @@
   "version": "0.0.0",
   "private": true,
   "scripts": {
-    "start": "node ./index.js"
+    "start": "node index.js"
   },
   "dependencies": {
+    "@json2csv/plainjs": "^7.0.3",
     "axios": "^1.5.1",
     "express": "~4.16.1",
     "fetch": "^1.1.0",
+    "json-2-csv": "^4.1.0",
     "node": "^20.7.0",
-    "node-fetch": "^3.3.2"
+    "node-fetch": "^3.3.2",
+    "nodemon": "^3.0.1"
   }
 }
