--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,21 +2,11 @@
 version: '3'
 services:
   app:
-    container_name: docker-mongo-demo1
+    container_name: webapp
     restart: always
     build: .
     ports:
     - '3000:3000'
-    external_links:
-    - mongo
     volumes:
     - .:/usr/src/app
   
-  mongo:
-    container_name: mongo
-    image: mongo
-    volumes:
-    - ./data:/data/db
-    ports:
-    - '27012:27017'
-            
