--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "express": "~4.16.1",
     "fetch": "^1.1.0",
     "json-2-csv": "^4.1.0",
-    "node-fetch": "^3.3.2",
-    "nodemon": "^3.0.1"
+    "mongodb": "^6.1.0",
+    "node-fetch": "^3.3.2"
   }
 }
